[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fare-finder"
version = "1.0.0"
description = "CLI tool to find the cheapest flights between US cities via SerpAPI"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
fare-finder = "fare_finder.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fare_finder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
